@@ -160,7 +160,13 @@ bool AstVar::sameNode(const AstNode* samep) const {
 }
 
 AstVarRef::AstVarRef(FileLine* fl, AstVar* varp, const VAccess& access)
-    : ASTGEN_SUPER_VarRef(fl, varp, access) {}
+    : ASTGEN_SUPER_VarRef(fl, varp, access) {
+    if (v3Global.assertDTypesResolved()) {
+        UASSERT_OBJ(varp, this, "Require non-null varp post resolution");
+    } else if (varp) {
+        m_name = varp->name();
+    }
+}
 AstVarRef::AstVarRef(FileLine* fl, AstNodeModule* pkgp, AstVar* varp, const VAccess& access)
     : AstVarRef{fl, varp, access} {
     classOrPackagep(pkgp);
@@ -171,7 +177,7 @@ AstVarRef::AstVarRef(FileLine* fl, AstVarScope* varscp, const VAccess& access)
     varScopep(varscp);
 }
 
-string AstVarRef::name() const { return varp() ? varp()->name() : "<null>"; }
+string AstVarRef::name() const { return varp() ? varp()->name() : nameThis(); }
 
 bool AstVarRef::sameNode(const AstVarRef* samep) const {
     if (varScopep()) {
